# winnow

./: .gitignore  CLAUDE.md  README.md  proposal.md  pyproject.toml
.claude/: settings.local.json
src/winnow/: __init__.py  _util.py  api.py  client.py  collect.py  config.py  exceptions.py  parsers.py  question.py  stopping.py  types.py  util.py
src/winnow/estimator/: __init__.py  base.py  boolean.py  categorical.py  numerical.py  optional_int.py
src/winnow/parser/: __init__.py  base.py  boolean.py  categorical.py  numerical.py  optional_bounded.py
src/winnow/stopping/: __init__.py  base.py  combinators.py  factories.py  primitives.py
tests/: conftest.py  test_client.py  test_collect.py  test_parsers.py  test_types.py
tests/estimator/: test_boolean.py  test_categorical.py  test_numerical.py  test_optional_int.py
tests/parser/: test_base.py  test_boolean.py  test_categorical.py  test_numerical.py  test_optional_bounded.py
tests/stopping/: test_combinators.py  test_primitives.py
